--- a/EDA1_ASSIGNMENT.ipynb
+++ b/EDA1_ASSIGNMENT.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,8 +16,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Sathwik075/EDA/blob/main/EDA1_ASSIGNMENT.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "tCLJlAaDwp1k"
       },
@@ -40,7 +51,7 @@
         "id": "3sUv1bpmw1OQ",
         "outputId": "0b00a9ac-4a0f-4c9e-b59a-e4279ea13aef"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -420,7 +431,7 @@
         "id": "VX22pw7Uw1Q7",
         "outputId": "eada132a-f456-4fa7-80ec-920ddd68f524"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -799,7 +810,7 @@
         "id": "07invd_iw1Tv",
         "outputId": "5322034b-9428-42cb-81e2-b973a75c84c9"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1245,7 +1256,7 @@
         "id": "kCTwsPPFryBW",
         "outputId": "55a0be92-36e0-4e87-b506-4dfaedcd23d7"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1368,7 +1379,7 @@
         "id": "2a50FNBGw1Wc",
         "outputId": "14955261-e1db-4624-abf8-83bcb2aed73a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1405,7 +1416,7 @@
       "metadata": {
         "id": "54DU3tldq-7I"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1420,7 +1431,7 @@
         "id": "GwZ2Mscqw1ZO",
         "outputId": "97acc762-536a-4108-8d10-8a10bb6ca8ec"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1448,7 +1459,7 @@
         "id": "XC_QTv3Pw1bz",
         "outputId": "6f490537-51e1-4202-8a50-7a5d5d2d832d"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1829,7 +1840,7 @@
         "id": "Q-cG-STrw1eq",
         "outputId": "4e125590-e52b-4f2a-8f1a-643de03ed69e"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2208,7 +2219,7 @@
         "id": "_w12lrZUw1hc",
         "outputId": "50ea9f26-54b6-4d5c-db71-3f89094a5c8a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2235,7 +2246,7 @@
         "id": "WzRe7Dymw1kK",
         "outputId": "85a95685-6194-46c8-d0c8-aff1b02fcc1d"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2553,7 +2564,7 @@
       "metadata": {
         "id": "a-eEXWLFw1nN"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2569,7 +2580,7 @@
         },
         "outputId": "8bc92dfc-9caa-4d19-b7db-29d8431e7cb4"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3125,7 +3136,7 @@
       "metadata": {
         "id": "aBiCMEhrw1s6"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3141,7 +3152,7 @@
         },
         "outputId": "47bd09a6-1add-4d50-f018-acbb844e1530"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3261,7 +3272,7 @@
       "metadata": {
         "id": "AaPgMaj8w10z"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3279,7 +3290,7 @@
         },
         "outputId": "348c603a-ebb5-45b2-c68a-bcf11b04ff69"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3309,7 +3320,7 @@
         },
         "outputId": "4cc0e6c6-2c7c-4ba4-f103-5e44cdfd4eab"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3467,7 +3478,7 @@
         },
         "outputId": "1562966f-2978-4d64-df9f-9498726ef5bf"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3504,7 +3515,7 @@
         },
         "outputId": "fd4f3ddf-f777-45c1-cd92-1b04cc7faf17"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4195,7 +4206,7 @@
       "metadata": {
         "id": "9gPddURBw2Cx"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4244,7 +4255,7 @@
         },
         "outputId": "924965e9-dfcd-41eb-c540-4e1007c5f625"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4390,7 +4401,7 @@
         "id": "TK2OqE4b_YpU",
         "outputId": "a1102af8-b730-4e13-8257-1314351c7432"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4420,7 +4431,7 @@
       "metadata": {
         "id": "JhU2G8V2Aycl"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4443,7 +4454,7 @@
         },
         "outputId": "1b77ba03-191d-4050-a2b4-998053ba01b5"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4487,7 +4498,7 @@
         },
         "outputId": "2ae1a7cd-179d-4e77-b2b7-b98c7274a70e"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4937,7 +4948,7 @@
         },
         "outputId": "f4aacf44-36b6-4bde-dfb5-05264e67c366"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4967,7 +4978,7 @@
       "metadata": {
         "id": "_3RWbf3MoZQ8"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4983,7 +4994,7 @@
         },
         "outputId": "75b316bd-abf1-4c2a-a138-ea0e2935e285"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5031,7 +5042,7 @@
         },
         "outputId": "5435914a-52c0-4499-930e-bce939bb9203"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5061,7 +5072,7 @@
       "metadata": {
         "id": "FMtWuX2yoZb5"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5077,7 +5088,7 @@
         },
         "outputId": "754daa2c-6740-41c8-a023-9c44833e7895"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5121,7 +5132,7 @@
         "id": "mL9rx96BGOKe",
         "outputId": "2eaa601d-634c-447c-bc53-ba28bd4840ea"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5176,7 +5187,7 @@
         "id": "veStf0HkGOcS",
         "outputId": "7569eb3b-316e-47f6-f695-6edac262854d"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5207,7 +5218,7 @@
         "id": "gpPmIYJuGOfT",
         "outputId": "470038c6-b105-40f0-f73c-1f8bcaeca6c5"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
